Test Commit from VS.Net

--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
 <body>
   <h1>Hello World</h1>
   <h3>This is my test web page for testing git hub source control.</h3>
+  <br/>
+  This is a standard paragraph in the test web page.  You can ignore this text.
+  <br/>
 </body>
 </html>
